removed uncessary heading

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <image src = "Book-Store-Management-System-logo.jpg"></image> <br>
-    <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  <a href="*"style="color: #152baa">404 Page</a> 
+    <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
     <h1>Homepage </h1>
 </head>
 <body>
