--- a/views/deleteBooks.html
+++ b/views/deleteBooks.html
@@ -6,7 +6,7 @@
     <h1>Delete All Books by a Topic</h1></br>
     <h1>
         <link rel="stylesheet" href="style.css">
-        <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  <a href="*"style="color: #152baa">404 Page</a> 
+        <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
     </h1>
     <form action='/postdeletebooks' method="POST">
         Topic: <input type="text"  name="topic" /> </br>
