--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <image src = "Book-Store-Management-System-logo.jpg"></image> <br>
-    <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
-    <h1>Homepage </h1>
 </head>
 <body>
+    <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
+    <h1>Homepage </h1>
+    <b> Welcome to Generic Bookstore! </b> <br>
+    <b> Add books, look at the list of books stored on MongoDB, update them, or look at their summary </b> 
 </body>
 </html>
