--- a/views/updateBooks.html
+++ b/views/updateBooks.html
@@ -1,13 +1,11 @@
 <html>
         <head>
-                <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="style.css">
         </head>
 <body>
+    <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
     <h1>Update Book Details</h1></br>
-    <h1>
-        <link rel="stylesheet" href="style.css">
-        <a href="/" style="color: #152baa">Homepage</a>  <a href="/getNewBook" style="color: #152baa">New Book</a> <a href="/getListBooks"style="color: #152baa">List Books</a> <a href="/deleteBooks"style="color: #152baa">Delete Books</a> <a href="/updateBooks"style="color: #152baa">Update Books</a> <a href="/getSummary"style="color: #152baa">Summary by Title</a>  
-    </h1>
+</br>
     <form action="/updatebooksdata" method="POST">
         Book's Old Title <input type="text"  name="titleold"/> </br>
         Book's New Title <input type="text"  name="titlenew"/> </br>
